--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "telewise",
   "private": true,
+  "engines": {
+    "node": "14.15.4"
+  },
   "dependencies": {
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
@@ -20,8 +23,5 @@
   "version": "0.1.0",
   "devDependencies": {
     "webpack-dev-server": "^4.5.0"
-  },
-  "engines": {
-    "node": "14.x"
   }
 }
